# config/converter.openapi.json
@@ -15,6 +15,209 @@
     "version": "1.0.0"
   },
   "paths": {
+    "/api/console/menu": {
+      "get": {
+        "tags": ["Menu"],
+        "operationId": "Menu_ListMenu",
+        "parameters": [
+          {
+            "name": "pagination.page",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "pagination.page_size",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "pagination.total",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "name",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "status",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "enum"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/api.console.administration.ListMenuReply"
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": ["Menu"],
+        "operationId": "Menu_CreateMenu",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/api.console.administration.CreateMenuRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/api.console.administration.CreateMenuReply"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/console/menu/{id}": {
+      "get": {
+        "tags": ["Menu"],
+        "operationId": "Menu_GetMenu",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/api.console.administration.GetMenuReply"
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": ["Menu"],
+        "operationId": "Menu_UpdateMenu",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/api.console.administration.UpdateMenuRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/api.console.administration.UpdateMenuReply"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Menu"],
+        "operationId": "Menu_DeleteMenu",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/api.console.administration.DeleteMenuReply"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/console/passport/authorize_menu": {
+      "get": {
+        "tags": ["Passport"],
+        "description": "获取授权的菜单",
+        "operationId": "Passport_AuthorizeMenu",
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/api.console.passport.AuthorizeMenuReply"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/console/passport/current": {
       "get": {
         "tags": ["Passport"],
@@ -1042,6 +1245,44 @@
           }
         }
       },
+      "api.console.administration.CreateMenuReply": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          }
+        }
+      },
+      "api.console.administration.CreateMenuRequest": {
+        "type": "object",
+        "properties": {
+          "pid": {
+            "type": "string"
+          },
+          "permission_id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "icon": {
+            "type": "string"
+          },
+          "path": {
+            "type": "string"
+          },
+          "sort_by": {
+            "type": "string"
+          },
+          "hidden": {
+            "type": "boolean"
+          },
+          "status": {
+            "type": "integer",
+            "format": "enum"
+          }
+        }
+      },
       "api.console.administration.CreatePermissionReply": {
         "type": "object",
         "properties": {}
@@ -1129,6 +1370,10 @@
           }
         }
       },
+      "api.console.administration.DeleteMenuReply": {
+        "type": "object",
+        "properties": {}
+      },
       "api.console.administration.DeletePermissionReply": {
         "type": "object",
         "properties": {}
@@ -1149,6 +1394,14 @@
             "items": {
               "$ref": "#/components/schemas/api.console.administration.RoleInfo"
             }
+          }
+        }
+      },
+      "api.console.administration.GetMenuReply": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "$ref": "#/components/schemas/api.console.administration.MenuInfo"
           }
         }
       },
@@ -1243,6 +1496,20 @@
           }
         }
       },
+      "api.console.administration.ListMenuReply": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/api.console.administration.MenuInfo"
+            }
+          },
+          "pagination": {
+            "$ref": "#/components/schemas/protobuf.Pagination"
+          }
+        }
+      },
       "api.console.administration.ListPermissionReply": {
         "type": "object",
         "properties": {
@@ -1282,6 +1549,47 @@
             "items": {
               "$ref": "#/components/schemas/api.console.administration.UserInfo"
             }
+          }
+        }
+      },
+      "api.console.administration.MenuInfo": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "pid": {
+            "type": "string"
+          },
+          "permission_id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "icon": {
+            "type": "string"
+          },
+          "path": {
+            "type": "string"
+          },
+          "sort_by": {
+            "type": "string"
+          },
+          "hidden": {
+            "type": "boolean"
+          },
+          "status": {
+            "type": "integer",
+            "format": "enum"
+          },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
           }
         }
       },
@@ -1393,6 +1701,43 @@
       "api.console.administration.UnbindRoleReply": {
         "type": "object",
         "properties": {}
+      },
+      "api.console.administration.UpdateMenuReply": {
+        "type": "object",
+        "properties": {}
+      },
+      "api.console.administration.UpdateMenuRequest": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "pid": {
+            "type": "string"
+          },
+          "permission_id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "icon": {
+            "type": "string"
+          },
+          "path": {
+            "type": "string"
+          },
+          "sort_by": {
+            "type": "string"
+          },
+          "hidden": {
+            "type": "boolean"
+          },
+          "status": {
+            "type": "integer",
+            "format": "enum"
+          }
+        }
       },
       "api.console.administration.UpdatePermissionReply": {
         "type": "object",
@@ -1519,6 +1864,17 @@
             "items": {
               "type": "integer",
               "format": "int32"
+            }
+          }
+        }
+      },
+      "api.console.passport.AuthorizeMenuReply": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/api.console.administration.MenuInfo"
             }
           }
         }
@@ -1704,6 +2060,9 @@
     }
   },
   "tags": [
+    {
+      "name": "Menu"
+    },
     {
       "name": "Passport"
     },
